--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         .header-jumbotron{
             min-height: 730px;
-            background-image: url("angkringan.jpg");
+            background-image: url("hade.png");
             background-size: cover;
             background-position: center;
             color: #FFF;
