--- a/index.html
+++ b/index.html
@@ -171,12 +171,6 @@
                                 @nplrhnsyh
                             </p>
                         </div>
-                        <div class="mb-3">
-                            <b>Instagram</b>
-                            <p> 
-                                @muh_hafiizh
-                            </p>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -190,7 +184,7 @@
                     <p>Saya Adalah Murid Kelas XI RPL Di Smk Informatika Al Irsyad Al-Islamiah Cirebon.</p>
                 </div>
                 <div class="col-md-4">
-                    <h4>Link Berguna</h4>
+                    <h4>Tombol Cepat</h4>
                     <ul class="list-unstyled">
                         <li><a href="#beranda">Beranda</a></li>
                         <li><a href="#deskripsi">Deskripsi</a></li>
@@ -207,7 +201,7 @@
             </div>
             <hr>
             <div class="text-center">
-                <p>&copy; 2023  Naufal Reihansyah</p>
+                <p>Copyright&copy; 2023  Naufal Reihansyah All Right Reserved</p>
             </div>
         </div>
     </footer>
