--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
     <div class="jumbotron jumbroton-fluid header-jumbotron">
         <div class="card-shadow">
         <div class="container">
-            <h1 class="display-4">Sejarah Angkringan</h1>
+            <h1 class="display-4">
+                <b>Sejarah </b>
+            </h1>
            <p>Angkringan ialah sejenis warung tolak 
             yang menjual berbagai-bagai jenis makanan serta minuman 
             <br>dan 
