--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="card-shadow">
         <div class="container">
             <h1 class="display-4">
-                <b>Sejarah </b>
+                <b>Angkringan </b>
             </h1>
            <p>Angkringan ialah sejenis warung tolak 
             yang menjual berbagai-bagai jenis makanan serta minuman 
@@ -168,10 +168,25 @@
                     </div>
                     <div class="col-md-5 mt-03">
                         <div class="mb-3">
-                            <b>Instagram</b>
-                            <p> 
-                                @nplrhnsyh
-                            </p>
+                            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                                <a class="navbar-brand" href="#">Sosial Media Saya</a>
+                                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                                    <span class="navbar-toggler-icon"></span>
+                                </button>
+                                <div class="collapse navbar-collapse" id="navbarNav">
+                                    <ul class="navbar-nav ml-auto">
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="https://www.instagram.com/namaprofilinstagram" target="_blank">Instagram</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="https://wa.me/nomorwhatsapp" target="_blank">WhatsApp</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="https://www.facebook.com/namaprofilfacebook" target="_blank">Facebook</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </nav>
                         </div>
                     </div>
                 </div>
