--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@
                                 <div class="collapse navbar-collapse" id="navbarNav">
                                     <ul class="navbar-nav ml-auto">
                                         <li class="nav-item">
-                                            <a class="nav-link" href="https://www.instagram.com/namaprofilinstagram" target="_blank">Instagram</a>
+                                            <a class="nav-link" href="https://www.instagram.com/nplrhnsyh" target="_blank">Instagram</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="https://wa.me/nomorwhatsapp" target="_blank">WhatsApp</a>
+                                            <a class="nav-link" href="https://wa.me/+6287783929081" target="_blank">WhatsApp</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="https://www.facebook.com/namaprofilfacebook" target="_blank">Facebook</a>
+                                            <a class="nav-link" href="https://www.facebook.com/Naufal Reihansyah" target="_blank">Facebook</a>
                                         </li>
                                     </ul>
                                 </div>
