--- a/index.html
+++ b/index.html
@@ -67,20 +67,36 @@
             <div class="col-12 col-lg-4 col-md-4">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="display-6 text-center mb-4" id="deskripsi">Penemu</h4>
-                        <p>Eyang Karso Dikromo atau biasa di panggil Karo jukut dari Desa Ngerangan, Klaten.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-lg-4 col-md-4">
-                <div class="card">
-                    <div class="card-body">
                         <h4 class="display-6 text-center mb-4">Asal Mula</h4>
                         <p>
-                            Dalam bukunya itu, Ratih menulis bahwa asal mula angkringan berasal dari para perantau
-                            asal Klaten. Sekitar tahun 1930, warga Kecamatan Bayat, klaten, yang bernama karso jukut
-                            memulai mengenalkan angkringan kepada masyarakat di Kota Solo
+                            - Wedang Bandrek
+                            <br>
+                            - Wedang Jahe
+                            <br>
+                            - Wedang Suhe
+                            <br>
+                            - Kopi Hitam
+                            <br>
+                            - Kopi Indocaffe
+                            <br>
+                            - Kopi Good Day Panas/Es
+                            <br>
+                            - Susu Putih/Cokelat
+                            <br>
+                            - Teh Manis Panas/Es
+                            <br>
+                            - Teh Tawar Panas/es
+                            <br>
+                            - Nutrisari
+                            <br>
+                            - Pop Ice
+                            <br>
+                            - Teh Jus
+                            <br>
+                            - Jasjus
+                            <br>
+                            - Top Ice
+                            <br>
                         </p>
                     </div>
                 </div>
@@ -88,11 +104,11 @@
             <div class="col-12 col-lg-4 col-md-4">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="display-6 text-center mb-4">Menu Yang Ada di Angkringan</h4>
+                        <h4 class="display-6 text-center mb-4">Menu Makanan</h4>
                         <p>
-                            - Sate Usus 
-                            <br>
                             - Nasi Kucing
+                            <br>
+                            - Sate Usus
                             <br>
                             - Sate Ceker
                             <br>
@@ -102,17 +118,19 @@
                             <br>
                             - Ayam Bacem 
                             <br>
-                            - Bandrek
-                            <br>
                             - Bacem Paru
                             <br>
                             - Sambal Orek
                             <br>
                             - Bakwan Jagung
                             <br>
-                            - Teh Sere
-                            <br>
                             - Kroket Kentang
+                            <br>
+                            - Ayam Goreng
+                            <br>
+                            - Tahu Bacem
+                            <br>
+                            - Tempe Bacem
                             <br>
                         </p>
                     </div>
@@ -168,25 +186,10 @@
                     </div>
                     <div class="col-md-5 mt-03">
                         <div class="mb-3">
-                            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                                <a class="navbar-brand" href="#">Sosial Media Saya</a>
-                                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                                    <span class="navbar-toggler-icon"></span>
-                                </button>
-                                <div class="collapse navbar-collapse" id="navbarNav">
-                                    <ul class="navbar-nav ml-auto">
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="https://www.instagram.com/nplrhnsyh" target="_blank">Instagram</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="https://wa.me/+6287783929081" target="_blank">WhatsApp</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="https://www.facebook.com/Naufal Reihansyah" target="_blank">Facebook</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </nav>
+                            <b>Instagram</b>
+                            <p> 
+                                @nplrhnsyh
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -201,13 +204,29 @@
                     <p>Saya Adalah Murid Kelas XI RPL Di Smk Informatika Al Irsyad Al-Islamiah Cirebon.</p>
                 </div>
                 <div class="col-md-4">
-                    <h4>Tombol Cepat</h4>
-                    <ul class="list-unstyled">
-                        <li><a href="#beranda">Beranda</a></li>
-                        <li><a href="#deskripsi">Deskripsi</a></li>
-                        <li><a href="#tentang">Tentang</a></li>
-                        <li><a href="#kontak">Kontak</a></li>
-                    </ul>
+                    <h3>Sosial Media</h3>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <h3>Instagram</h3>
+                                <a href="https://www.instagram.com/nplrhnsyh" target="_blank">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                            </div>
+                            <div class="col-md-4">
+                                <h3>WhatsApp</h3>
+                                <a href="https://wa.me/+6287783929081" target="_blank">
+                                    <i class="fab fa-whatsapp"></i>
+                                </a>
+                            </div>
+                            <div class="col-md-4">
+                                <h3>Facebook</h3>
+                                <a href="https://www.facebook.com/Naufal Reihansyah" target="_blank">
+                                    <i class="fab fa-facebook"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-4">
                     <h4>Kontak</h4>
