--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="col-12 col-lg-4 col-md-4">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="display-6 text-center mb-4">Asal Mula</h4>
+                        <h4 class="display-6 text-center mb-4">Menu</h4>
                         <p>
                             - Wedang Bandrek
                             <br>
@@ -101,10 +101,11 @@
                     </div>
                 </div>
             </div>
+            <br>
             <div class="col-12 col-lg-4 col-md-4">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="display-6 text-center mb-4">Menu Makanan</h4>
+                        <h4 class="display-6 text-center mb-4">Menu</h4>
                         <p>
                             - Nasi Kucing
                             <br>
@@ -138,6 +139,7 @@
             </div>
         </div>
     </div>
+    <br>
     <div class="container mt-5">
         <div class="row">
             <div class="col-12 col-md-5">
@@ -208,23 +210,18 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-4">
-                                <h3>Instagram</h3>
-                                <a href="https://www.instagram.com/nplrhnsyh" target="_blank">
-                                    <i class="fab fa-instagram"></i>
-                                </a>
-                            </div>
-                            <div class="col-md-4">
-                                <h3>WhatsApp</h3>
-                                <a href="https://wa.me/+6287783929081" target="_blank">
-                                    <i class="fab fa-whatsapp"></i>
-                                </a>
-                            </div>
-                            <div class="col-md-4">
-                                <h3>Facebook</h3>
-                                <a href="https://www.facebook.com/Naufal Reihansyah" target="_blank">
-                                    <i class="fab fa-facebook"></i>
-                                </a>
-                            </div>
+                             <div class="collapse navbar-collapse" id="navbarNav">
+                                <ul class="navbar-nav">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="https://www.facebook.com/Naufal.Reihansyah"><i class="fab fa-facebook"></i></a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="https://twitter.com/itil_kuda1234"><i class="fab fa-twitter"></i></a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="https://www.instagram.com/nplrhnsyh/"><i class="fab fa-instagram"></i></a>
+                                    </li>
+                                </ul>
                         </div>
                     </div>
                 </div>
@@ -236,7 +233,7 @@
                 </div>
             </div>
             <hr>
-            <div class="text-center">
+            <div class="text-warning">
                 <p>Copyright&copy; 2023  Naufal Reihansyah All Right Reserved</p>
             </div>
         </div>
