--- a/index.html
+++ b/index.html
@@ -54,14 +54,10 @@
             <h1 class="display-4">
                 <b>Angkringan </b>
             </h1>
-           <p>Angkringan ialah sejenis warung tolak 
-            yang menjual berbagai-bagai jenis makanan serta minuman 
-            <br>dan 
-            yang biasa terdapat di setiap persimpangan jalan di Jawa Tengah dan Yogyakarta.</p>
         </div>
     </div>
     </div>
-
+    <br><br>
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-4 col-md-4">
@@ -101,7 +97,7 @@
                     </div>
                 </div>
             </div>
-            <br>
+            <br><br>
             <div class="col-12 col-lg-4 col-md-4">
                 <div class="card">
                     <div class="card-body">
@@ -202,8 +198,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h4>Tentang Kami</h4>
-                    <p>Saya Adalah Murid Kelas XI RPL Di Smk Informatika Al Irsyad Al-Islamiah Cirebon.</p>
+                    <h4>Sejarah Singkat</h4>
+                    <p>Angkringan ialah sejenis warung tolak 
+                        yang menjual berbagai-bagai jenis makanan serta minuman 
+                        yang biasa terdapat di setiap persimpangan jalan di Jawa Tengah dan Yogyakarta.</p>
                 </div>
                 <div class="col-md-4">
                     <h3>Sosial Media</h3>
