--- a/index.html
+++ b/index.html
@@ -17,6 +17,43 @@
             justify-content: center;
             align-items: center;
         }    
+        .socialButton {
+            display: flex;
+            align-items: center;
+            gap: 25px;
+            cursor: pointer;
+        }
+
+        .socialButton i {
+            font-size: 1.9em;
+            text-decoration: none;
+            color: rgb(255, 255, 255);
+            transition: 0.3s;
+            opacity: 0.5;
+            transform: translateY(0);
+        }
+
+        .socialButton i:hover {
+            opacity: 1;
+            transform: translateY(-4px);
+        }
+
+        .navbar-social .navbar-brand {
+            color: #fff;
+            font-weight: bold;
+        }
+
+        .navbar-social .navbar-brand:hover {
+            color: #fff;
+        }
+
+        .navbar-social .navbar-nav .nav-link {
+            color: #fff;
+        }
+
+        .navbar-social .navbar-nav .nav-link:hover {
+            color: #007bff;
+        }
     </style>
 </head>
 <body>
@@ -166,29 +203,20 @@
         <div class="card shadow">
             <div class="card body">
                 <div class="row">
-                    <div class="col-md-7">
-                        <b class="display-6" id="kontak">Mari Ngopi</b>
-                        <div class="mb-3 mt-4">
-                            <label for="" class="form-label">Nama</label>
-                            <input type="text" class="form-control" placeholder="Nama Anda">
-                        </div>
-                        <div class="mb-3 mt-4">
-                            <label for="" class="form-label">Pesan</label>
-                            <input type="text" class="form-control" placeholder="Pesan Anda">
-                        </div>
-                        <div class="mb-3">
-                            <button type="button" class="btn btn-primary">
-                                Kirim
-                            </button>
-                        </div>
-                    </div>
-                    <div class="col-md-5 mt-03">
-                        <div class="mb-3">
-                            <b>Instagram</b>
-                            <p> 
-                                @nplrhnsyh
-                            </p>
-                        </div>
+                    <div class="container">
+                        <b class="display-6" id="kontak">Form Pengiriman Pesan</b>
+                        <form id="messageForm">
+                            <div class="mb-3">
+                                <label for="nama" class="form-label">Nama</label>
+                                <input type="text" class="form-control" id="nama" name="nama" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="pesan" class="form-label">Pesan</label>
+                                <textarea class="form-control" id="pesan" name="pesan" rows="5" required></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Kirim Pesan</button>
+                        </form>
+                        <div id="pesanTerkirim" class="mt-3"></div>
                     </div>
                 </div>
             </div>
@@ -204,30 +232,25 @@
                         yang biasa terdapat di setiap persimpangan jalan di Jawa Tengah dan Yogyakarta.</p>
                 </div>
                 <div class="col-md-4">
-                    <h3>Sosial Media</h3>
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-4">
-                             <div class="collapse navbar-collapse" id="navbarNav">
-                                <ul class="navbar-nav">
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="https://www.facebook.com/Naufal.Reihansyah"><i class="fab fa-facebook"></i></a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="https://twitter.com/itil_kuda1234"><i class="fab fa-twitter"></i></a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="https://www.instagram.com/nplrhnsyh/"><i class="fab fa-instagram"></i></a>
-                                    </li>
-                                </ul>
-                        </div>
-                    </div>
+                    <h4>Halaman</h4>
+                    <ul class="list-unstyled">
+                        <li><a href="#beranda">Beranda</a></li>
+                        <li><a href="#deskripsi">Deskripsi</a></li>
+                        <li><a href="#tentang">Tentang</a></li>
+                        <li><a href="#kontak">Kontak</a></li>
+                    </ul>
                 </div>
                 <div class="col-md-4">
+                <div class="col-md-4 ms-auto" id="kontak">
                     <h4>Kontak</h4>
-                    <p>Alamat: Jl. Kigede Mayung Ds. Buyut No. 21, Kota Cirebon</p>
-                    <p>Email: palrei1507@gmail.com</p>
-                    <p>Telepon: 0877-8392-9081</p>
+                    <p>Email : palrei1507@gmail.com</p>
+                    <p>Telpon : 087783929081</p>
+                    <div class="socialButton mt-3">
+                        <a href="https://www.instagram.com/nplrhnsyh/"><i class="bx bxl-instagram-alt"></i></a>
+                        <a href="https://www.facebook.com/Naufal.Reihansyah"><i class="bx bxl-facebook"></i></a>
+                        <a href="https://twitter.com/itil_kuda1234"><i class="bx bxl-twitter"></i></a>
+                        <a href="https://discord.com/channels/@me"><i class="bx bxl-discord-alt"></i></a>
+                    </div>
                 </div>
             </div>
             <hr>
@@ -237,5 +260,31 @@
         </div>
     </footer>
 <script type='text/javascript' src="bootstrap/js/bootstrap.min.js"></script>    
+
+    <!-- Mengimpor Bootstrap JS dan jQuery (diperlukan oleh Bootstrap) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <!-- Mengimpor SweetAlert2 JS -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.all.min.js"></script>
+
+    <script>
+        $(document).ready(function() {
+            $("#messageForm").submit(function(event) {
+                event.preventDefault();
+
+                // Ambil data dari formulir
+                const nama = $("#nama").val();
+                const pesan = $("#pesan").val();
+
+                // Simulasikan pengiriman pesan (Anda dapat mengganti ini dengan logika nyata)
+                // Di sini kita hanya menampilkan pesan notifikasi
+                Swal.fire({
+                    title: `Pesan Terkirim`,
+                    text: `Pesan dari ${nama}: ${pesan}`,
+                    icon: 'success'
+                });
+            });
+        });
+    </script>
 </body>
 </html> 
