--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing</title>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+   <!-- Mengimpor Bootstrap CSS -->
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+   <!-- Mengimpor FontAwesome CSS (Opsional) -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
         .header-jumbotron{
             min-height: 730px;
@@ -240,17 +244,34 @@
                         <li><a href="#kontak">Kontak</a></li>
                     </ul>
                 </div>
+                <div class="container">
+                    <h2>Tautan Media Sosial</h2>
+                    <ul class="list-unstyled">
+                        <!-- Tautan Instagram -->
+                        <li>
+                            <a href="https://www.instagram.com/nplrhnsyh" target="_blank">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                        </li>
+                        <!-- Tautan Facebook -->
+                        <li>
+                            <a href="https://www.facebook.com/palrei07" target="_blank">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+                        </li>
+                        <!-- Tautan Twitter -->
+                        <li>
+                            <a href="https://twitter.com/itil_kuda1234" target="_blank">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
                 <div class="col-md-4">
                 <div class="col-md-4 ms-auto" id="kontak">
                     <h4>Kontak</h4>
                     <p>Email : palrei1507@gmail.com</p>
                     <p>Telpon : 087783929081</p>
-                    <div class="socialButton mt-3">
-                        <a href="https://www.instagram.com/nplrhnsyh/"><i class="bx bxl-instagram-alt"></i></a>
-                        <a href="https://www.facebook.com/Naufal.Reihansyah"><i class="bx bxl-facebook"></i></a>
-                        <a href="https://twitter.com/itil_kuda1234"><i class="bx bxl-twitter"></i></a>
-                        <a href="https://discord.com/channels/@me"><i class="bx bxl-discord-alt"></i></a>
-                    </div>
                 </div>
             </div>
             <hr>
@@ -266,6 +287,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <!-- Mengimpor SweetAlert2 JS -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.all.min.js"></script>
+    <!-- Mengimpor FontAwesome JS (Opsional) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
 
     <script>
         $(document).ready(function() {
