--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <a class="nav-link active text-white" aria-current="page" href="#beranda">Beranda</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="#deskripsi">Deskripsi</a>
+          <a class="nav-link text-white" href="#menu">Menu</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-white" aria-disabled="true" href="#tentang">Tentang</a>
@@ -102,7 +102,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-4 col-md-4">
-                <div class="card">
+                <div class="card" id="menu">
                     <div class="card-body">
                         <h4 class="display-6 text-center mb-4">Menu</h4>
                         <p>
@@ -141,7 +141,7 @@
             <br><br>
             <div class="col-12 col-lg-4 col-md-4">
                 <div class="card">
-                    <div class="card-body">
+                    <div class="card-body" id="menu">
                         <h4 class="display-6 text-center mb-4">Menu</h4>
                         <p>
                             - Nasi Kucing
