--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
    <!-- Mengimpor FontAwesome CSS (Opsional) -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
+        .navbar {
+            background-color: rgba(0, 0, 0, 0.5); /* Ubah nilai alpha sesuai kebutuhan Anda */
+        }
         .header-jumbotron{
             min-height: 730px;
             background-image: url("hade.png");
@@ -414,35 +417,29 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark" id="beranda">
-  <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <a class="navbar-brand" href="#">Angkringanku</a>
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active text-white" aria-current="page" href="#beranda">Beranda</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#menu">Menu</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" aria-disabled="true" href="#tentang">Tentang</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link text-white" aria-disabled="true" href="#kontak">Kontak</a>
-          </li>
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
-</nav>
-    <div class="jumbotron jumbroton-fluid header-jumbotron">
+    <nav class= "navbar navbar-expand-lg navbar-social bg-transparent bg-light fonts fixed-top">
+        <a class="navbar-brand" href="#">Angkringanku</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#beranda">Beranda <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#menu">Menu</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#tentang">Tentang</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#kontak">Kontak</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="jumbotron jumbroton-fluid header-jumbotron" id="beranda">
         <div class="card-shadow">
         <div class="container">
             <h1 class="display-4">
@@ -583,22 +580,22 @@
     <footer class="bg-dark text-light">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <h4>Sejarah Singkat</h4>
                     <p>Angkringan ialah sejenis warung tolak 
                         yang menjual berbagai-bagai jenis makanan serta minuman 
                         yang biasa terdapat di setiap persimpangan jalan di Jawa Tengah dan Yogyakarta.</p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <h4>Halaman</h4>
                     <ul class="list-unstyled">
                         <li><a href="#beranda">Beranda</a></li>
-                        <li><a href="#deskripsi">Deskripsi</a></li>
+                        <li><a href="#menu">Menu</a></li>
                         <li><a href="#tentang">Tentang</a></li>
                         <li><a href="#kontak">Kontak</a></li>
                     </ul>
                 </div>
-                <div class="container">
+                <div class="container col-md-3">
                     <h2>Tautan Media Sosial</h2>
                     <ul class="list-unstyled">
                         <!-- Tautan Instagram -->
@@ -621,15 +618,15 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-md-4">
-                <div class="col-md-4 ms-auto" id="kontak">
+                <div class="col-md-3 ml-03">
+                <div class="col-md-3 ms-auto" id="kontak">
                     <h4>Kontak</h4>
                     <p>Email : palrei1507@gmail.com</p>
                     <p>Telpon : 087783929081</p>
                 </div>
             </div>
             <hr>
-            <div class="text-warning">
+            <div class="text-warning" align="center">
                 <p>Copyright&copy; 2023  Naufal Reihansyah All Right Reserved</p>
             </div>
         </div>
@@ -642,7 +639,11 @@
     <!-- Mengimpor SweetAlert2 JS -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.all.min.js"></script>
     <!-- Mengimpor FontAwesome JS (Opsional) -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 
     <script>
         $(document).ready(function() {
